--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Atheneum</title>
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
