--- a/index.html
+++ b/index.html
@@ -1,138 +1,123 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Atheneum</title>
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
-  </head>
-  <body>
-
-<!-- Nav Bar -->
-
-  <div class="row">
-    <div class="large-12 columns">
-      <div class="nav-bar right">
-       <ul class="button-group">
-         <li><a href="#" class="button">Link 1</a></li>
-         <li><a href="#" class="button">Link 2</a></li>
-         <li><a href="#" class="button">Link 3</a></li>
-         <li><a href="#" class="button">Link 4</a></li>
-        </ul>
-      </div>
-      <h1>Blog <small>This is my blog. It's awesome.</small></h1>
-      <hr />
-    </div>
-  </div>
-
-  <!-- End Nav -->
+<head>
+  <meta charset="UTF-8">
+  <title>Atheneum</title>
+  <meta name="author" content="name">
+  <meta name="description" content="description here">
+  <link rel="stylesheet" type="text/css" href="/styles.css" />
+</head>
+<body>
 
 
-  <!-- Main Page Content and Sidebar -->
-
-  <div class="row">
-
-    <!-- Main Blog Content -->
-    <div class="large-9 columns" role="content">
-
-      <article>
-
-        <h3><a href="#">Blog Post Title</a></h3>
-        <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-
-        <div class="row">
-          <div class="large-6 columns">
-            <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-            <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-          </div>
-          <div class="large-6 columns">
-            <img src="http://placehold.it/400x240&text=[img]" />
-          </div>
-        </div>
-
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      </article>
-
-      <hr />
-
-      <article>
-
-        <h3><a href="#">Blog Post Title</a></h3>
-        <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
-
-        <div class="row">
-          <div class="large-6 columns">
-            <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-            <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-          </div>
-          <div class="large-6 columns">
-            <img src="http://placehold.it/400x240&text=[img]" />
-          </div>
-        </div>
-
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      </article>
-
-    </div>
-
-    <!-- End Main Content -->
+<div id="header" class="column-full">
+<div class="container">
+  
+	<div class="column-full">
+		
+		<div class="column-six">
+			
+			<h1><a href="/"><span>Atheneum Learning</span></a></h1>
+			<p>Translating research to practice for behavioral health.</p>
+			
+		</div>
+		
+		<div id="companylinks" class="column-six">
+			
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/about-us/">About Us</a></li>
+				<li><a href="/flexible-cbt/">Flexible CBT</a></li>
+				<li><a href="/products/">Products</a></li>
+				<li><a href="/video-lectures/">Webinars</a></li>
+				<li><a href="/my-account/">My Account</a></li>
+			</ul>
+			
+		</div>
+		
+	</div>
+	
+</div>
+</div>
 
 
-    <!-- Sidebar -->
+<div id="content" class="column-full">
+<div class="container">
+	
+	<div class="column-full">
+		
+		<div class="column-twelve">
+			
+			<h2>The Bridge from Research to Practice</h2>
+			
+		</div>
+		
+	</div>
+	
+	<div id="productpromo" class="column-full">
+		
+		<div class="column-six">
 
-    <aside class="large-3 columns">
+			<r:content />
+			
+		</div>
+		
+		<div class="column-six">
+			
+			<div class="intro">
+				<p>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses</p>
+			</div>
 
-      <h5>Categories</h5>
-      <ul class="side-nav">
-        <li><a href="#">News</a></li>
-        <li><a href="#">Code</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Fun</a></li>
-        <li><a href="#">Weasels</a></li>
-      </ul>
+			<div id="cta-learn" class="call-to-action">
+			<p>Learn More About</p>
+			<p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
+			</div>
 
-      <div class="panel">
-        <h5>Featured</h5>
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-        <a href="#">Read More &rarr;</a>
-      </div>
+			<div id="cta-webinar" class="call-to-action">
+			<p>Sign Up for Upcoming Webinar</p>
+			<p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
+			</div>
 
-    </aside>
+			<div id="cta-newsletter" class="call-to-action">
+			<p>Stay Up to Date</p>
+			<p><a hre="">Subscribe to Atheneum Newsletter</a></p>
+			</div>
+			
+		</div>
+		
+	</div>
+	
+</div>
+</div>
 
-    <!-- End Sidebar -->
-  </div>
+<div id="sitemap" class="column-full">
+<div class="container">
+  
+	<div class="column-full">
+		
+		<div class="column-eight">
+			
+			<p><a href="/">Home</a> &bull; <a href="/about-us/">About Us</a> &bull; <a href="/flexible-cbt/">Flexible CBT</a> &bull; <a href="/products/">Products</a> &bull; <a href="/video-lectures/">Video Lectures</a> &bull; <a href="/my-account/">My Account</a> &bull; <a href="/partners/">Partners</a></p>
+			<p><a href="/who-benefits/">Who Benefits</a> &bull; <a href="/psychoeducation-resources/">Psychoeducation Resources</a> &bull; <a href="/blog/">Blog on Flexible CBT</a> &bull; <a href="/news-and-papers/">News and Papers</a> &bull; <a href="/contact-us/">Contact Us</a></p>
+			<p>Copyright &copy; Atheneum Learning&trade;. All Rights Reserved.</p>
+			<p class="credits"><em>Web Design by <a href="http://www.wurkit.com/">Wurkit</a></em></p>
+			
+		</div>
+		
+		<div class="column-four">
+		  
+		  <p><strong>Atheneum Learning / TRi Behavioral</strong><br />
+		  275 Grove Street, Suite 2-400<br />
+			Newton, MA 02466<br />
+			Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
+			Phone: 617-329-9685</p>
+		  
+		</div>
+		
+	</div>
+	
+</div>
+</div>
 
-  <!-- End Main Content and Sidebar -->
-
-
-  <!-- Footer -->
-
-  <footer class="row">
-    <div class="large-12 columns">
-      <hr />
-      <div class="row">
-        <div class="large-6 columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
-        </div>
-        <div class="large-6 columns">
-          <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  </body>
+</body>
 </html>
