--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Atheneum</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
 
