--- a/index.html
+++ b/index.html
@@ -9,115 +9,43 @@
 </head>
 <body>
 
+<img src="images/logo.gif" />
 
-<div id="header" class="column-full">
-<div class="container">
-  
-	<div class="column-full">
-		
-		<div class="column-six">
-			
-			<h1><a href="/"><span>Atheneum Learning</span></a></h1>
-			<p>Translating research to practice for behavioral health.</p>
-			
-		</div>
-		
-		<div id="companylinks" class="column-six">
-			
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/about-us/">About Us</a></li>
-				<li><a href="/flexible-cbt/">Flexible CBT</a></li>
-				<li><a href="/products/">Products</a></li>
-				<li><a href="/video-lectures/">Webinars</a></li>
-				<li><a href="/my-account/">My Account</a></li>
-			</ul>
-			
-		</div>
-		
-	</div>
-	
-</div>
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/about-us/">About Us</a></li>
+  <li><a href="/flexible-cbt/">Flexible CBT</a></li>
+  <li><a href="/products/">Products</a></li>
+  <li><a href="/video-lectures/">Webinars</a></li>
+  <li><a href="/my-account/">My Account</a></li>
+</ul>
+
+<h1>The Bridge from Research to Practice</h1>
+
+<img src="video.png" />
+
+<h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
+
+<div id="cta-learn" class="call-to-action">
+  <p>Learn More About</p>
+  <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
 </div>
 
-
-<div id="content" class="column-full">
-<div class="container">
-	
-	<div class="column-full">
-		
-		<div class="column-twelve">
-			
-			<h2>The Bridge from Research to Practice</h2>
-			
-		</div>
-		
-	</div>
-	
-	<div id="productpromo" class="column-full">
-		
-		<div class="column-six">
-
-			<r:content />
-			
-		</div>
-		
-		<div class="column-six">
-			
-			<div class="intro">
-				<p>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses</p>
-			</div>
-
-			<div id="cta-learn" class="call-to-action">
-			<p>Learn More About</p>
-			<p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
-			</div>
-
-			<div id="cta-webinar" class="call-to-action">
-			<p>Sign Up for Upcoming Webinar</p>
-			<p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
-			</div>
-
-			<div id="cta-newsletter" class="call-to-action">
-			<p>Stay Up to Date</p>
-			<p><a hre="">Subscribe to Atheneum Newsletter</a></p>
-			</div>
-			
-		</div>
-		
-	</div>
-	
-</div>
+<div id="cta-webinar" class="call-to-action">
+  <p>Sign Up for Upcoming Webinar</p>
+  <p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
 </div>
 
-<div id="sitemap" class="column-full">
-<div class="container">
-  
-	<div class="column-full">
-		
-		<div class="column-eight">
-			
-			<p><a href="/">Home</a> &bull; <a href="/about-us/">About Us</a> &bull; <a href="/flexible-cbt/">Flexible CBT</a> &bull; <a href="/products/">Products</a> &bull; <a href="/video-lectures/">Video Lectures</a> &bull; <a href="/my-account/">My Account</a> &bull; <a href="/partners/">Partners</a></p>
-			<p><a href="/who-benefits/">Who Benefits</a> &bull; <a href="/psychoeducation-resources/">Psychoeducation Resources</a> &bull; <a href="/blog/">Blog on Flexible CBT</a> &bull; <a href="/news-and-papers/">News and Papers</a> &bull; <a href="/contact-us/">Contact Us</a></p>
-			<p>Copyright &copy; Atheneum Learning&trade;. All Rights Reserved.</p>
-			<p class="credits"><em>Web Design by <a href="http://www.wurkit.com/">Wurkit</a></em></p>
-			
-		</div>
-		
-		<div class="column-four">
-		  
-		  <p><strong>Atheneum Learning / TRi Behavioral</strong><br />
-		  275 Grove Street, Suite 2-400<br />
-			Newton, MA 02466<br />
-			Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
-			Phone: 617-329-9685</p>
-		  
-		</div>
-		
-	</div>
-	
+<div id="cta-newsletter" class="call-to-action">
+  <p>Stay Up to Date</p>
+  <p><a hre="">Subscribe to Atheneum Newsletter</a></p>
 </div>
-</div>
+
+<p><strong>Atheneum Learning / TRi Behavioral</strong><br />
+275 Grove Street, Suite 2-400<br />
+Newton, MA 02466<br />
+Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
+Phone: 617-329-9685</p>
 
 </body>
 </html>
