More goofing around with the mobile version.

--- a/index.html
+++ b/index.html
@@ -9,43 +9,55 @@
 </head>
 <body>
 
-<img src="images/logo.gif" />
+<div id="header">
 
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/about-us/">About Us</a></li>
-  <li><a href="/flexible-cbt/">Flexible CBT</a></li>
-  <li><a href="/products/">Products</a></li>
-  <li><a href="/video-lectures/">Webinars</a></li>
-  <li><a href="/my-account/">My Account</a></li>
-</ul>
+  <div class="logo"><img src="images/logo.gif" /></div>
 
-<h1>The Bridge from Research to Practice</h1>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about-us/">About Us</a></li>
+    <li><a href="/flexible-cbt/">Flexible CBT</a></li>
+    <li><a href="/products/">Products</a></li>
+    <li><a href="/video-lectures/">Webinars</a></li>
+    <li><a href="/my-account/">My Account</a></li>
+  </ul>
 
-<img src="video.png" />
-
-<h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
-
-<div id="cta-learn" class="call-to-action">
-  <p>Learn More About</p>
-  <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
 </div>
 
-<div id="cta-webinar" class="call-to-action">
-  <p>Sign Up for Upcoming Webinar</p>
-  <p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
+<div id="content">
+
+  <h1>The Bridge from Research to Practice</h1>
+
+  <div class="video"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+
+  <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
+
+  <div id="cta-learn" class="call-to-action">
+    <p>Learn More About</p>
+    <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
+  </div>
+
+  <div id="cta-webinar" class="call-to-action">
+    <p>Sign Up for Upcoming Webinar</p>
+    <p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
+  </div>
+
+  <div id="cta-newsletter" class="call-to-action">
+    <p>Stay Up to Date</p>
+    <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+  </div>
+
 </div>
 
-<div id="cta-newsletter" class="call-to-action">
-  <p>Stay Up to Date</p>
-  <p><a hre="">Subscribe to Atheneum Newsletter</a></p>
-</div>
+<div id="footer">
 
-<p><strong>Atheneum Learning / TRi Behavioral</strong><br />
-275 Grove Street, Suite 2-400<br />
-Newton, MA 02466<br />
-Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
-Phone: 617-329-9685</p>
+  <p><strong>Atheneum Learning</strong><br />
+  275 Grove Street, Suite 2-400<br />
+  Newton, MA 02466<br />
+  Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
+  Phone: 617-329-9685</p>
+
+</div>
 
 </body>
 </html>
