--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name=viewport content="width=device-width">
   <title>Atheneum</title>
   <meta name="author" content="name">
   <meta name="description" content="description here">
