Tweaking some basic mobile stuff.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="/products/">Products</a></li>
     <li><a href="/video-lectures/">Webinars</a></li>
     <li><a href="/my-account/">My Account</a></li>
+    <li><a href="/contact-us/">Contact Us</a></li>
   </ul>
 
 </div>
@@ -29,7 +30,7 @@
 
   <h1>The Bridge from Research to Practice</h1>
 
-  <div class="video"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+  <div class="video"><iframe src="http://player.vimeo.com/video/27017520" width="480" height="318" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
   <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
 
