--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <h1>The Bridge from Research to Practice</h1>
 
-  <div class="video"><iframe src="http://player.vimeo.com/video/27017520" width="480" height="318" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+  <div class="video-container"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
   <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
 
