--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
 
   <div class="logo"><img src="images/logo.gif" /></div>
 
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about-us/">About Us</a></li>
-    <li><a href="/flexible-cbt/">Flexible CBT</a></li>
-    <li><a href="/products/">Products</a></li>
-    <li><a href="/video-lectures/">Webinars</a></li>
-    <li><a href="/my-account/">My Account</a></li>
-    <li><a href="/contact-us/">Contact Us</a></li>
-  </ul>
+  <div id="product-nav">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/flexible-cbt/">Flexible CBT</a></li>
+      <li><a href="/products/">Products</a></li>
+      <li><a href="/video-lectures/">Webinars</a></li>
+    </ul>
+  </div>
+
+  <div id="company-nav">
+    <ul>
+      <li><a href="/about-us/">About Us</a></li>
+      <li><a href="/my-account/">My Account</a></li>
+      <li><a href="/contact-us/">Contact Us</a></li>
+    </ul>
+  </div>
 
 </div>
 
