Little content tweaks.

--- a/about-us.html
+++ b/about-us.html
@@ -16,18 +16,18 @@
 
   <div id="product-nav">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/flexible-cbt/">Flexible CBT</a></li>
-      <li><a href="/products/">Products</a></li>
-      <li><a href="/video-lectures/">Webinars</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">Flexible CBT</a></li>
+      <li><a href="about-us.html">Products</a></li>
+      <li><a href="about-us.html">Webinars</a></li>
     </ul>
   </div>
 
   <div id="company-nav">
     <ul>
-      <li><a href="/about-us/">About Us</a></li>
-      <li><a href="/my-account/">My Account</a></li>
-      <li><a href="/contact-us/">Contact Us</a></li>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="about-us.html">My Account</a></li>
+      <li><a href="about-us.html">Contact Us</a></li>
     </ul>
   </div>
 
@@ -38,9 +38,9 @@
   <h1>About Us</h1>
 
   <ul class="company-nav">
-    <li><a href="#" class="current">Overview</a></li>
-    <li><a href="#">Our Thought Leaders</a></li>
-    <li><a href="#">Management Team</a></li>
+    <li><a href="about-us.html" class="current">Overview</a></li>
+    <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
+    <li><a href="our-thought-leaders.html">Management Team</a></li>
   </ul>
 
   <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
