--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
   <div id="product-nav">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/flexible-cbt/">Flexible CBT</a></li>
-      <li><a href="/products/">Products</a></li>
-      <li><a href="/video-lectures/">Webinars</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">Flexible CBT</a></li>
+      <li><a href="about-us.html">Products</a></li>
+      <li><a href="about-us.html">Webinars</a></li>
     </ul>
   </div>
 
   <div id="company-nav">
     <ul>
-      <li><a href="/about-us/">About Us</a></li>
-      <li><a href="/my-account/">My Account</a></li>
-      <li><a href="/contact-us/">Contact Us</a></li>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="about-us.html">My Account</a></li>
+      <li><a href="about-us.html">Contact Us</a></li>
     </ul>
   </div>
 
@@ -35,11 +35,11 @@
 
 <div id="content">
 
-  <h1>The Bridge from Research to Practice</h1>
+  <h1>The Bridge from Research to Practice for Behavioral Health</h1>
 
   <div class="video-container"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
-  <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses. Translating research to practice for behavioral health.</h2>
+  <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses.</h2>
 
   <div id="cta-learn" class="call-to-action">
     <p>Learn More About</p>
