--- a/about-us.html
+++ b/about-us.html
@@ -35,12 +35,12 @@
 
 <div id="content">
 
-  <h1 id="internal-anchor">About Us</h1>
+  <h1>About Us</h1>
 
   <ul class="internal-nav">
-    <li><a href="about-us.html#internal-anchor" class="current">Overview</a></li>
-    <li><a href="our-thought-leaders.html#internal-anchor">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html#internal-anchor">Management Team</a></li>
+    <li><a href="about-us.html#content" class="current">Overview</a></li>
+    <li><a href="our-thought-leaders.html#content">Our Thought Leaders</a></li>
+    <li><a href="our-thought-leaders.html#content">Management Team</a></li>
   </ul>
 
   <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
