--- a/our-thought-leaders.html
+++ b/our-thought-leaders.html
@@ -35,12 +35,12 @@
 
 <div id="content">
 
-  <h1 id="internal-anchor">About Us</h1>
+  <h1>About Us</h1>
 
   <ul class="internal-nav">
-    <li><a href="about-us.html#internal-anchor">Overview</a></li>
-    <li><a href="our-thought-leaders.html#internal-anchor" class="current">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html#internal-anchor">Management Team</a></li>
+    <li><a href="about-us.html#content">Overview</a></li>
+    <li><a href="our-thought-leaders.html#content" class="current">Our Thought Leaders</a></li>
+    <li><a href="our-thought-leaders.html#content">Management Team</a></li>
   </ul>
 
   <h2>Edmund C. Neuhaus, PhD, ABPP is the Founder & CEO, Atheneum Learning</h2>
