Changing to using nav for mobile

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <meta name="description" content="description here">
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<body>
+<body id="top">
 
-<div id="header">
+<div id="header-small">
+
+  <div class="logo">
+    <div class="logo-wrapper"><img src="images/logo.gif" /></div>
+  </div>
+  <div class="menu">
+    <a href="#footer-nav">Menu</a>
+  </div>
+
+</div>
+
+<div id="header-large">
 
   <div class="logo"><img src="images/logo.gif" /></div>
 
@@ -54,6 +65,28 @@
   <div id="cta-newsletter" class="call-to-action">
     <p>Stay Up to Date</p>
     <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+  </div>
+
+</div>
+
+<div id="footer-nav">
+
+  <div class="product-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">Flexible CBT</a></li>
+      <li><a href="about-us.html">Products</a></li>
+      <li><a href="about-us.html">Webinars</a></li>
+    </ul>
+  </div>
+
+  <div class="company-nav">
+    <ul>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="about-us.html">My Account</a></li>
+      <li><a href="about-us.html">Contact Us</a></li>
+      <li class="jump-to-top"><a href="#top">Up to Top</a></li>
+    </ul>
   </div>
 
 </div>
