--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header-small">
 
   <div class="logo">
-    <div class="logo-wrapper"><img src="images/logo.gif" /></div>
+    <div><img src="images/logo.gif" /></div>
   </div>
   <div class="menu">
     <a href="#footer-nav">Menu</a>
