Hooking up a few content pages.

--- a/our-thought-leaders.html
+++ b/our-thought-leaders.html
@@ -8,9 +8,20 @@
   <meta name="description" content="description here">
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<body>
+<body id="top">
 
-<div id="header">
+<div id="header-small">
+
+  <div class="logo">
+    <div><img src="images/logo.gif" /></div>
+  </div>
+  <div class="menu">
+    <a href="#footer-nav">Menu</a>
+  </div>
+
+</div>
+
+<div id="header-large">
 
   <div class="logo"><img src="images/logo.gif" /></div>
 
@@ -38,9 +49,9 @@
   <h1>About Us</h1>
 
   <ul class="internal-nav">
-    <li><a href="about-us.html#content">Overview</a></li>
-    <li><a href="our-thought-leaders.html#content" class="current">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html#content">Management Team</a></li>
+    <li><a href="about-us.html">Overview</a></li>
+    <li><a href="our-thought-leaders.html" class="current">Our Thought Leaders</a></li>
+    <li><a href="our-thought-leaders.html">Management Team</a></li>
   </ul>
 
   <h2>Edmund C. Neuhaus, PhD, ABPP is the Founder & CEO, Atheneum Learning</h2>
@@ -60,6 +71,28 @@
   <div id="cta-download" class="call-to-action">
     <p>Download as PDF</p>
     <p><a href="">Curriculum Vitae for Dr. Neuhaus</a></p>
+  </div>
+
+</div>
+
+<div id="footer-nav">
+
+  <div class="product-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">Flexible CBT</a></li>
+      <li><a href="about-us.html">Products</a></li>
+      <li><a href="about-us.html">Webinars</a></li>
+    </ul>
+  </div>
+
+  <div class="company-nav">
+    <ul>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="about-us.html">My Account</a></li>
+      <li><a href="about-us.html">Contact Us</a></li>
+      <li class="jump-to-top"><a href="#top">Up to Top</a></li>
+    </ul>
   </div>
 
 </div>
