--- a/about-us.html
+++ b/about-us.html
@@ -8,9 +8,20 @@
   <meta name="description" content="description here">
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<body>
+<body id="top">
 
-<div id="header">
+<div id="header-small">
+
+  <div class="logo">
+    <div><img src="images/logo.gif" /></div>
+  </div>
+  <div class="menu">
+    <a href="#footer-nav">Menu</a>
+  </div>
+
+</div>
+
+<div id="header-large">
 
   <div class="logo"><img src="images/logo.gif" /></div>
 
@@ -38,9 +49,9 @@
   <h1>About Us</h1>
 
   <ul class="internal-nav">
-    <li><a href="about-us.html#content" class="current">Overview</a></li>
-    <li><a href="our-thought-leaders.html#content">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html#content">Management Team</a></li>
+    <li><a href="about-us.html" class="current">Overview</a></li>
+    <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
+    <li><a href="our-thought-leaders.html">Management Team</a></li>
   </ul>
 
   <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
@@ -51,6 +62,28 @@
 
   <h3>About Edmund C. Neuhaus, PhD, ABPP</h3>
   <p>Edmund C. Neuhaus, founded Atheneum Learning to teach the most current and effective evidence-based treatment approaches in behavioral health. The breakthrough TRi Training System couples the content of these approaches with a best-in-class e-learning instructional technology to maximize learning effectiveness and ultimately produce better patient outcomes.</p>
+
+</div>
+
+<div id="footer-nav">
+
+  <div class="product-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">Flexible CBT</a></li>
+      <li><a href="about-us.html">Products</a></li>
+      <li><a href="about-us.html">Webinars</a></li>
+    </ul>
+  </div>
+
+  <div class="company-nav">
+    <ul>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="about-us.html">My Account</a></li>
+      <li><a href="about-us.html">Contact Us</a></li>
+      <li class="jump-to-top"><a href="#top">Up to Top</a></li>
+    </ul>
+  </div>
 
 </div>
 
