Tweaking section nav

--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
 
   <h1>About Us</h1>
 
-  <ul class="internal-nav">
+  <ul id="internal-nav" class="company-related">
     <li><a href="about-us.html" class="current">Overview</a></li>
     <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
     <li><a href="our-thought-leaders.html">Management Team</a></li>
