Small screen code cleanup.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header-small">
 
   <div class="logo">
-    <div><img src="images/logo.gif" /></div>
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
   <div class="menu">
     <a href="#footer-nav">Menu</a>
@@ -53,7 +53,7 @@
   <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses.</h2>
 
   <div id="cta-learn" class="call-to-action">
-    <p>Learn More About</p>
+    <p>Learn More</p>
     <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
   </div>
 
