--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
 <div id="header-small">
 
   <div class="logo">
-    <div><img src="images/logo.gif" /></div>
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
   <div class="menu">
     <a href="#footer-nav">Menu</a>
