--- a/our-thought-leaders.html
+++ b/our-thought-leaders.html
@@ -29,7 +29,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="about-us.html">Products</a></li>
+      <li><a href="products.html">Products</a></li>
       <li><a href="about-us.html">Webinars</a></li>
     </ul>
   </div>
@@ -81,7 +81,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="about-us.html">Products</a></li>
+      <li><a href="products.html">Products</a></li>
       <li><a href="about-us.html">Webinars</a></li>
     </ul>
   </div>
