--- a/products.html
+++ b/products.html
@@ -46,22 +46,33 @@
 
 <div id="content">
 
-  <h1>About Us</h1>
+  <h1>Products</h1>
 
   <ul id="internal-nav" class="company-related">
-    <li><a href="about-us.html" class="current">Overview</a></li>
-    <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html">Management Team</a></li>
+    <li><a href="products.html" class="current">Overview</a></li>
+    <li><a href="bulk-credits.html">Bulk Credits</a></li>
+    <li><a href="products.html">Students</a></li>
+    <li><a href="products.html">Frequently Asked Questions</a></li>
   </ul>
 
-  <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
+  <h2>The online training in Flexible CBT is the best practices of Cognitive Behavioral Therapy: Pragmatic and Effective.</h2>
 
-  <p>Unfortunately, academic research does not translate quickly to real-world practice. There are tremendous discoveries, new learnings, and significant innovations – but they don't directly meet the needs of patients because they don't make it to the office. Why? Because the clinicians have trouble translating the research into treatment. Until Atheneum Learning.</p>
-  <p>Atheneum Learning employs innovative teaching methods to train professionals and students in the most current evidence based treatment approaches to mental health via highly interactive multimedia programs, published information, and workshops to ensure that their patients receive the care they deserve.</p>
-  <p>Atheneum Learning's training programs enable professionals to improve their clinical decision making - giving them the tools to think in contingencies - and ultimately provide the most effective treatment possible to their patients. Our easy-to-use, programs ensure that the learning process is as productive, efficient, and intuitive as possible. With training modules fit specifically to your needs, Atheneum Learning is the most relevant and effective choice for interactive, psychology, learning programs.</p>
+  <p>The online Flexible CBT training program is complete with interactive multimedia and sophisticated learning games to improve your competency and mastery of CBT. You can sign up for the training course and number of credit hours that meets your needs below.</p>
 
-  <h3>About Edmund C. Neuhaus, PhD, ABPP</h3>
-  <p>Edmund C. Neuhaus, founded Atheneum Learning to teach the most current and effective evidence-based treatment approaches in behavioral health. The breakthrough TRi Training System couples the content of these approaches with a best-in-class e-learning instructional technology to maximize learning effectiveness and ultimately produce better patient outcomes.</p>
+  <h3><a href="bulk-credits.html">Bulk Credits, 20 for $499</a></h3>
+  <p>Includes 6 month subscription for online Flexible CBT: Modules 1, 2, & 3 and 20 CE Credits.</p>
+
+  <h3><a href="bulk-credits.html">Student Subscription</a></h3>
+  <p>Special pricing for 6 month student subscription for online Flexible CBT: Modules 1, 2, & 3.</p>
+
+  <h3>Benefits and Features of Online CBT Training Program:</h3>
+  <ul>
+    <li>17 Online Learning Games to increase your mastery and knowledge of CBT</li>
+    <li>8 Built-in videos of Dr. Neuhaus throughout the training to describe and demonstrate CBT principles and practices</li>
+    <li>Instructional Videos, Blog Posts, and Tips to support you to complete the online training</li>
+    <li>Access to additional handouts to use with clients</li>
+    <li>Free Access to webinars conducted by Dr. Neuhaus on specific topics, including anxiety, borderline personality disorder, and behavioral activation</li>
+  </ul>
 
   <div id="cta-newsletter" class="call-to-action">
     <p>Stay Up to Date</p>
