--- a/bulk-credits.html
+++ b/bulk-credits.html
@@ -48,7 +48,7 @@
 
   <h1>Products</h1>
 
-  <ul id="internal-nav" class="company-related">
+  <ul id="internal-nav" class="product-related">
     <li><a href="products.html">Overview</a></li>
     <li><a href="bulk-credits.html" class="current">Bulk Credits</a></li>
     <li><a href="products.html">Students</a></li>
