--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
 
   <h1>Products</h1>
 
-  <ul id="internal-nav" class="company-related">
+  <ul id="internal-nav" class="product-related">
     <li><a href="products.html" class="current">Overview</a></li>
     <li><a href="bulk-credits.html">Bulk Credits</a></li>
     <li><a href="products.html">Students</a></li>
