Whole lotta media querie action and cleanup.

--- a/about-us.html
+++ b/about-us.html
@@ -23,23 +23,29 @@
 
 <div id="header-large">
 
-  <div class="logo"><img src="images/logo.gif" /></div>
-
-  <div id="product-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about-us.html">Webinars</a></li>
-    </ul>
+  <div class="logo">
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
 
-  <div id="company-nav">
-    <ul>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="about-us.html">My Account</a></li>
-      <li><a href="about-us.html">Contact Us</a></li>
-    </ul>
+  <div class="nav-wrapper">
+
+    <div class="product-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">Flexible CBT</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about-us.html">Webinars</a></li>
+      </ul>
+    </div>
+
+    <div class="company-nav">
+      <ul>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="about-us.html">My Account</a></li>
+        <li><a href="about-us.html">Contact Us</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </div>
@@ -48,24 +54,32 @@
 
   <h1>About Us</h1>
 
-  <ul id="internal-nav" class="company-related">
-    <li><a href="about-us.html" class="current">Overview</a></li>
-    <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
-    <li><a href="our-thought-leaders.html">Management Team</a></li>
-  </ul>
+  <div id="content-nav">
 
-  <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
+    <ul class="company-related">
+      <li><a href="about-us.html" class="current">Overview</a></li>
+      <li><a href="our-thought-leaders.html">Our Thought Leaders</a></li>
+      <li><a href="our-thought-leaders.html">Management Team</a></li>
+    </ul>
 
-  <p>Unfortunately, academic research does not translate quickly to real-world practice. There are tremendous discoveries, new learnings, and significant innovations – but they don't directly meet the needs of patients because they don't make it to the office. Why? Because the clinicians have trouble translating the research into treatment. Until Atheneum Learning.</p>
-  <p>Atheneum Learning employs innovative teaching methods to train professionals and students in the most current evidence based treatment approaches to mental health via highly interactive multimedia programs, published information, and workshops to ensure that their patients receive the care they deserve.</p>
-  <p>Atheneum Learning's training programs enable professionals to improve their clinical decision making - giving them the tools to think in contingencies - and ultimately provide the most effective treatment possible to their patients. Our easy-to-use, programs ensure that the learning process is as productive, efficient, and intuitive as possible. With training modules fit specifically to your needs, Atheneum Learning is the most relevant and effective choice for interactive, psychology, learning programs.</p>
+  </div>
 
-  <h3>About Edmund C. Neuhaus, PhD, ABPP</h3>
-  <p>Edmund C. Neuhaus, founded Atheneum Learning to teach the most current and effective evidence-based treatment approaches in behavioral health. The breakthrough TRi Training System couples the content of these approaches with a best-in-class e-learning instructional technology to maximize learning effectiveness and ultimately produce better patient outcomes.</p>
+  <div id="content-area">
 
-  <div id="cta-newsletter" class="call-to-action">
-    <p>Stay Up to Date</p>
-    <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    <h2>Atheneum Learning begins and ends with helping clinicians achieve greater outcomes with their patients. This can only be accomplished if the clinician can provide treatment that is known to be effective.</h2>
+
+    <p>Unfortunately, academic research does not translate quickly to real-world practice. There are tremendous discoveries, new learnings, and significant innovations – but they don't directly meet the needs of patients because they don't make it to the office. Why? Because the clinicians have trouble translating the research into treatment. Until Atheneum Learning.</p>
+    <p>Atheneum Learning employs innovative teaching methods to train professionals and students in the most current evidence based treatment approaches to mental health via highly interactive multimedia programs, published information, and workshops to ensure that their patients receive the care they deserve.</p>
+    <p>Atheneum Learning's training programs enable professionals to improve their clinical decision making - giving them the tools to think in contingencies - and ultimately provide the most effective treatment possible to their patients. Our easy-to-use, programs ensure that the learning process is as productive, efficient, and intuitive as possible. With training modules fit specifically to your needs, Atheneum Learning is the most relevant and effective choice for interactive, psychology, learning programs.</p>
+
+    <h3>About Edmund C. Neuhaus, PhD, ABPP</h3>
+    <p>Edmund C. Neuhaus, founded Atheneum Learning to teach the most current and effective evidence-based treatment approaches in behavioral health. The breakthrough TRi Training System couples the content of these approaches with a best-in-class e-learning instructional technology to maximize learning effectiveness and ultimately produce better patient outcomes.</p>
+
+    <div id="cta-newsletter" class="call-to-action">
+      <p>Stay Up to Date</p>
+      <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    </div>
+
   </div>
   
 </div>
