--- a/index.html
+++ b/index.html
@@ -23,23 +23,29 @@
 
 <div id="header-large">
 
-  <div class="logo"><img src="images/logo.gif" /></div>
-
-  <div id="product-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about-us.html">Webinars</a></li>
-    </ul>
+  <div class="logo">
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
 
-  <div id="company-nav">
-    <ul>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="about-us.html">My Account</a></li>
-      <li><a href="about-us.html">Contact Us</a></li>
-    </ul>
+  <div class="nav-wrapper">
+
+    <div class="product-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">Flexible CBT</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about-us.html">Webinars</a></li>
+      </ul>
+    </div>
+
+    <div class="company-nav">
+      <ul>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="about-us.html">My Account</a></li>
+        <li><a href="about-us.html">Contact Us</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </div>
@@ -48,23 +54,31 @@
 
   <h1>The Bridge from Research to Practice for Behavioral Health</h1>
 
-  <div class="video-container"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+  <div class="promo-area">
 
-  <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses.</h2>
+    <div class="video-wrapper"><div class="video-container"><iframe src="http://player.vimeo.com/video/27017520" width="500" height="331" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div></div>
 
-  <div id="cta-learn" class="call-to-action">
-    <p>Learn More</p>
-    <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
   </div>
 
-  <div id="cta-webinar" class="call-to-action">
-    <p>Sign Up for Upcoming Webinar</p>
-    <p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
-  </div>
+  <div class="promo-area">
 
-  <div id="cta-newsletter" class="call-to-action">
-    <p>Stay Up to Date</p>
-    <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    <h2>Atheneum Learning leads the way in delivering best-in-class, evidence-based behavioral health eLearning courses.</h2>
+
+    <div id="cta-learn" class="call-to-action">
+      <p>Learn More</p>
+      <p><a href="">Cognitive Behavioral Therapy Training: The Flexible CBT Approach</a></p>
+    </div>
+
+    <div id="cta-webinar" class="call-to-action">
+      <p>Sign Up for Upcoming Webinar</p>
+      <p><a href="">Flexible CBT Online Training: Overview and Tips for Mastery of CBT</a></p>
+    </div>
+
+    <div id="cta-newsletter" class="call-to-action">
+      <p>Stay Up to Date</p>
+      <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    </div>
+
   </div>
 
 </div>
