--- a/products.html
+++ b/products.html
@@ -23,23 +23,29 @@
 
 <div id="header-large">
 
-  <div class="logo"><img src="images/logo.gif" /></div>
-
-  <div id="product-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about-us.html">Webinars</a></li>
-    </ul>
+  <div class="logo">
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
 
-  <div id="company-nav">
-    <ul>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="about-us.html">My Account</a></li>
-      <li><a href="about-us.html">Contact Us</a></li>
-    </ul>
+  <div class="nav-wrapper">
+
+    <div class="product-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">Flexible CBT</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about-us.html">Webinars</a></li>
+      </ul>
+    </div>
+
+    <div class="company-nav">
+      <ul>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="about-us.html">My Account</a></li>
+        <li><a href="about-us.html">Contact Us</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </div>
@@ -48,37 +54,45 @@
 
   <h1>Products</h1>
 
-  <ul id="internal-nav" class="product-related">
-    <li><a href="products.html" class="current">Overview</a></li>
-    <li><a href="bulk-credits.html">Bulk Credits</a></li>
-    <li><a href="products.html">Students</a></li>
-    <li><a href="products.html">Frequently Asked Questions</a></li>
-  </ul>
+  <div id="content-nav">
 
-  <h2>The online training in Flexible CBT is the best practices of Cognitive Behavioral Therapy: Pragmatic and Effective.</h2>
+    <ul class="product-related">
+      <li><a href="products.html" class="current">Overview</a></li>
+      <li><a href="bulk-credits.html">Bulk Credits</a></li>
+      <li><a href="products.html">Students</a></li>
+      <li><a href="products.html">Frequently Asked Questions</a></li>
+    </ul>
 
-  <p>The online Flexible CBT training program is complete with interactive multimedia and sophisticated learning games to improve your competency and mastery of CBT. You can sign up for the training course and number of credit hours that meets your needs below.</p>
-
-  <h3><a href="bulk-credits.html">Bulk Credits, 20 for $499</a></h3>
-  <p>Includes 6 month subscription for online Flexible CBT: Modules 1, 2, & 3 and 20 CE Credits.</p>
-
-  <h3><a href="bulk-credits.html">Student Subscription</a></h3>
-  <p>Special pricing for 6 month student subscription for online Flexible CBT: Modules 1, 2, & 3.</p>
-
-  <h3>Benefits and Features of Online CBT Training Program:</h3>
-  <ul>
-    <li>17 Online Learning Games to increase your mastery and knowledge of CBT</li>
-    <li>8 Built-in videos of Dr. Neuhaus throughout the training to describe and demonstrate CBT principles and practices</li>
-    <li>Instructional Videos, Blog Posts, and Tips to support you to complete the online training</li>
-    <li>Access to additional handouts to use with clients</li>
-    <li>Free Access to webinars conducted by Dr. Neuhaus on specific topics, including anxiety, borderline personality disorder, and behavioral activation</li>
-  </ul>
-
-  <div id="cta-newsletter" class="call-to-action">
-    <p>Stay Up to Date</p>
-    <p><a href="">Subscribe to Atheneum Newsletter</a></p>
   </div>
-  
+
+  <div id="content-area">
+
+    <h2>The online training in Flexible CBT is the best practices of Cognitive Behavioral Therapy: Pragmatic and Effective.</h2>
+
+    <p>The online Flexible CBT training program is complete with interactive multimedia and sophisticated learning games to improve your competency and mastery of CBT. You can sign up for the training course and number of credit hours that meets your needs below.</p>
+
+    <h3><a href="bulk-credits.html">Bulk Credits, 20 for $499</a></h3>
+    <p>Includes 6 month subscription for online Flexible CBT: Modules 1, 2, & 3 and 20 CE Credits.</p>
+
+    <h3><a href="bulk-credits.html">Student Subscription</a></h3>
+    <p>Special pricing for 6 month student subscription for online Flexible CBT: Modules 1, 2, & 3.</p>
+
+    <h3>Benefits and Features of Online CBT Training Program:</h3>
+    <ul>
+      <li>17 Online Learning Games to increase your mastery and knowledge of CBT</li>
+      <li>8 Built-in videos of Dr. Neuhaus throughout the training to describe and demonstrate CBT principles and practices</li>
+      <li>Instructional Videos, Blog Posts, and Tips to support you to complete the online training</li>
+      <li>Access to additional handouts to use with clients</li>
+      <li>Free Access to webinars conducted by Dr. Neuhaus on specific topics, including anxiety, borderline personality disorder, and behavioral activation</li>
+    </ul>
+
+    <div id="cta-newsletter" class="call-to-action">
+      <p>Stay Up to Date</p>
+      <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    </div>
+    
+  </div>
+
 </div>
 
 <div id="footer-nav">
