--- a/bulk-credits.html
+++ b/bulk-credits.html
@@ -23,23 +23,29 @@
 
 <div id="header-large">
 
-  <div class="logo"><img src="images/logo.gif" /></div>
-
-  <div id="product-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">Flexible CBT</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about-us.html">Webinars</a></li>
-    </ul>
+  <div class="logo">
+    <a href="index.html"><img src="images/logo.gif" /></a>
   </div>
 
-  <div id="company-nav">
-    <ul>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="about-us.html">My Account</a></li>
-      <li><a href="about-us.html">Contact Us</a></li>
-    </ul>
+  <div class="nav-wrapper">
+
+    <div class="product-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">Flexible CBT</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about-us.html">Webinars</a></li>
+      </ul>
+    </div>
+
+    <div class="company-nav">
+      <ul>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="about-us.html">My Account</a></li>
+        <li><a href="about-us.html">Contact Us</a></li>
+      </ul>
+    </div>
+    
   </div>
 
 </div>
@@ -48,58 +54,66 @@
 
   <h1>Products</h1>
 
-  <ul id="internal-nav" class="product-related">
-    <li><a href="products.html">Overview</a></li>
-    <li><a href="bulk-credits.html" class="current">Bulk Credits</a></li>
-    <li><a href="products.html">Students</a></li>
-    <li><a href="products.html">Frequently Asked Questions</a></li>
-  </ul>
+  <div id="content-nav">
 
-  <h2>20 CE Credits for $499&mdash;Please review section required for CEU/CME.</h2>
+    <ul class="product-related">
+      <li><a href="products.html">Overview</a></li>
+      <li><a href="bulk-credits.html" class="current">Bulk Credits</a></li>
+      <li><a href="products.html">Students</a></li>
+      <li><a href="products.html">Frequently Asked Questions</a></li>
+    </ul>
 
-  <p>Includes 6 month subscription for online training in Flexible CBT, with 20 CE credits sponsored by McLean Hospital, an affiliate of Harvard Medical School. This is for the Flexible CBT Course designed to teach you the advanced techniques and clinical skills of the Flexible CBT Approach using an online modular format-complete with creative, interactive learning games. (More Details Below)</p>
-
-  <div class="make-purchase">
-    <h3>Sign Up for Flexible CBT ($499)</h3>
-    <p>Please review <a href="">Requirements for CE credits</a> before purchase. By adding to cart, you're indicating you understand the requirements for claiming continuing education credits.</p>
-    <p class="add-to-cart"><a href=""><strong>Add to Cart</strong> (after reviewing requirements)</a></p>
   </div>
 
-  <h3>How the program works</h3>
-  <p>Module 1 builds a comprehensive foundational knowledge in Cognitive Behavioral Therapy through Fixed Values that guide clinical decision-making for assessment, case formulation, the therapeutic relationship, psychoeducation,and skills training.</p>
-  <p>In Modules 2 and 3, Fixed Values are operationalized into Principles and Protocols for applying the Flexible CBT Approach. Principles are the anchor points to guide clinical decision-making in assessment and treatment. Protocols are specific methods to apply. Knowledge of principles and protocols facilitates rigorous clinical judgment leading to effective treatment.</p>
+  <div id="content-area">
 
-  <h3>Module 1: Conceptual basis for the treatment framework</h3>
-  <ul>
-    <li>CBT Triangle: Thoughts, Feelings and Behaviors</li>
-    <li>Functional Improvement is basis for priorities, goals, and measuring change</li>
-    <li>CBT Skill Acquisition: Core skills for depression, anxiety, stress, and personality disorders (Borderline PD)</li>
-    <li>Collaboration and Connection between therapist and patient</li>
-    <li>Evidence-based CBT treatments are the foundation of the approach</li>
-    <li>Description of Life Context to determine unique needs of each patient</li>
-    <li>Treatment is a Learning Process that progresses in stages</li>
-  </ul>
+    <h2>20 CE Credits for $499&mdash;Please review section required for CEU/CME.</h2>
 
-  <h3>Module 2: Assessment and Beginning the Work of Therapy</h3>
-  <ul>
-    <li>Establishing the Relationship as an essential component of assessment: integrating therapist and patient perspectives for effective collaboration</li>
-    <li>Assessment framework using Cognitive Behavioral Analysis (CBA)</li>
-    <li>Case formulation leading to treatment planning: creating realistic goals and expectations</li>
-  </ul>
+    <p>Includes 6 month subscription for online training in Flexible CBT, with 20 CE credits sponsored by McLean Hospital, an affiliate of Harvard Medical School. This is for the Flexible CBT Course designed to teach you the advanced techniques and clinical skills of the Flexible CBT Approach using an online modular format-complete with creative, interactive learning games. (More Details Below)</p>
 
-  <h3>Module 3: Skills Training and Psychoeducation</h3>
-  <ul>
-    <li>Bridging assessment to skills training and psychoeducation</li>
-    <li>Matching skills to problems</li>
-    <li>Psychoeducation as precursor to skills training</li>
-    <li>Principles and Protocols for skills training</li>
-    <li>Skills training for depression, anxiety, stress, and personality disorders (Borderline PD) training modules</li>
-    <li>Clinical judgment for when initial interventions don’t work</li>
-  </ul>
+    <div class="make-purchase">
+      <h3>Sign Up for Flexible CBT ($499)</h3>
+      <p>Please review <a href="">Requirements for CE credits</a> before purchase. By adding to cart, you're indicating you understand the requirements for claiming continuing education credits.</p>
+      <p class="add-to-cart"><a href=""><strong>Add to Cart</strong> (after reviewing requirements)</a></p>
+    </div>
 
-  <div id="cta-newsletter" class="call-to-action">
-    <p>Stay Up to Date</p>
-    <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    <h3>How the program works</h3>
+    <p>Module 1 builds a comprehensive foundational knowledge in Cognitive Behavioral Therapy through Fixed Values that guide clinical decision-making for assessment, case formulation, the therapeutic relationship, psychoeducation,and skills training.</p>
+    <p>In Modules 2 and 3, Fixed Values are operationalized into Principles and Protocols for applying the Flexible CBT Approach. Principles are the anchor points to guide clinical decision-making in assessment and treatment. Protocols are specific methods to apply. Knowledge of principles and protocols facilitates rigorous clinical judgment leading to effective treatment.</p>
+
+    <h3>Module 1: Conceptual basis for the treatment framework</h3>
+    <ul>
+      <li>CBT Triangle: Thoughts, Feelings and Behaviors</li>
+      <li>Functional Improvement is basis for priorities, goals, and measuring change</li>
+      <li>CBT Skill Acquisition: Core skills for depression, anxiety, stress, and personality disorders (Borderline PD)</li>
+      <li>Collaboration and Connection between therapist and patient</li>
+      <li>Evidence-based CBT treatments are the foundation of the approach</li>
+      <li>Description of Life Context to determine unique needs of each patient</li>
+      <li>Treatment is a Learning Process that progresses in stages</li>
+    </ul>
+
+    <h3>Module 2: Assessment and Beginning the Work of Therapy</h3>
+    <ul>
+      <li>Establishing the Relationship as an essential component of assessment: integrating therapist and patient perspectives for effective collaboration</li>
+      <li>Assessment framework using Cognitive Behavioral Analysis (CBA)</li>
+      <li>Case formulation leading to treatment planning: creating realistic goals and expectations</li>
+    </ul>
+
+    <h3>Module 3: Skills Training and Psychoeducation</h3>
+    <ul>
+      <li>Bridging assessment to skills training and psychoeducation</li>
+      <li>Matching skills to problems</li>
+      <li>Psychoeducation as precursor to skills training</li>
+      <li>Principles and Protocols for skills training</li>
+      <li>Skills training for depression, anxiety, stress, and personality disorders (Borderline PD) training modules</li>
+      <li>Clinical judgment for when initial interventions don’t work</li>
+    </ul>
+
+    <div id="cta-newsletter" class="call-to-action">
+      <p>Stay Up to Date</p>
+      <p><a href="">Subscribe to Atheneum Newsletter</a></p>
+    </div>
+
   </div>
   
 </div>
