Capping width on large screens and changing logo at different sizes.

--- a/our-thought-leaders.html
+++ b/our-thought-leaders.html
@@ -13,7 +13,7 @@
 <div id="header-small">
 
   <div class="logo">
-    <a href="index.html"><img src="images/logo.gif" /></a>
+    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
   <div class="menu">
     <a href="#footer-nav">Menu</a>
@@ -22,9 +22,10 @@
 </div>
 
 <div id="header-large">
+<div id="header-large-wrapper">
 
   <div class="logo">
-    <a href="index.html"><img src="images/logo.gif" /></a>
+    <a href="index.html"><img src="images/logo-arc.png" /></a>
   </div>
 
   <div class="nav-wrapper">
@@ -49,8 +50,10 @@
   </div>
 
 </div>
+</div>
 
 <div id="content">
+<div id="content-wrapper">
 
   <h1>About Us</h1>
 
@@ -88,6 +91,7 @@
   </div>
 
 </div>
+</div>
 
 <div id="footer-nav">
 
@@ -112,6 +116,7 @@
 </div>
 
 <div id="footer">
+<div id="footer">
 
   <p><strong>Atheneum Learning</strong><br />
   275 Grove Street, Suite 2-400<br />
@@ -119,6 +124,7 @@
   Email: <a href="mailto:support@atheneumlearning.com">support@atheneumlearning.com</a><br />
   Phone: 617-329-9685</p>
 
+</div>
 </div>
 
 </body>
