Forgot an ID update.

--- a/our-thought-leaders.html
+++ b/our-thought-leaders.html
@@ -116,7 +116,7 @@
 </div>
 
 <div id="footer">
-<div id="footer">
+<div id="footer-wrapper">
 
   <p><strong>Atheneum Learning</strong><br />
   275 Grove Street, Suite 2-400<br />
